# ChangeLog for dev-java/edtftpj
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/edtftpj/ChangeLog,v 1.13 2006/10/05 15:38:33 gustavoz Exp $

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> edtftpj-1.4.4.ebuild,
  edtftpj-1.4.8.ebuild, edtftpj-1.5.2.ebuild, edtftpj-1.5.3.ebuild:
  Dropping sparc keywords, see #96229

*edtftpj-1.5.2 (20 Dec 2005)

  20 Dec 2005; Petteri Räty <betelgeuse@gentoo.org> +edtftpj-1.5.2.ebuild:
  Version bump. Added examples and source use flags.

  13 Nov 2005; Michael Hanselmann <hansmi@gentoo.org> edtftpj-1.4.8.ebuild:
  Stable on ppc.

*edtftpj-1.4.8 (05 May 2005)

  05 May 2005; Jan Brinkmann <luckyduck@gentoo.org> edtftpj-1.4.4.ebuild,
  +edtftpj-1.4.8.ebuild:
  new upstream version. marked 1.4.4 stable on amd64, ppc and x86

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> edtftpj-1.4.2.ebuild,
  edtftpj-1.4.4.ebuild:
  added missing jikes dependency. see #78819.

  29 Oct 2004; Thomas Matthijs <axxo@gentoo.org> edtftpj-1.4.2.ebuild,
  edtftpj-1.4.4.ebuild:
  removed nomirror

*edtftpj-1.4.4 (20 Oct 2004)

  20 Oct 2004; Dylan Carlson <absinthe@gentoo.org> +edtftpj-1.4.4.ebuild:
  Version bump.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> edtftpj-1.4.2.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*edtftpj-1.4.2 (24 Aug 2004)

  24 Aug 2004; Chris Aniszczyk <zx@gentoo.org> -edtftpj-1.3.3.ebuild,
  +edtftpj-1.4.2.ebuild:
  Version bump & Cleanup

*edtftpj-1.3.3 (21 May 2004)

  21 May 2004; Chris Aniszczyk <zx@gentoo.org> +edtftpj-1.3.3.ebuild:
  Version bump. Closes #51633
  Thanks to Mike Javorski <mike_javorski@bigfoot.com> for the heads up.

*edtftpj-1.3.2 (14 May 2004)

  14 May 2004; Chris Aniszczyk <zx@gentoo.org> +metadata.xml,
  +edtftpj-1.3.2.ebuild:
  Initial Import. Closes #49798
  Thanks to Mike Javorski <mike_javorski@bigfoot.com> for the preliminary ebuild.
