@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/edtftpj
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/edtftpj/ChangeLog,v 1.13 2006/10/05 15:38:33 gustavoz Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/edtftpj/ChangeLog,v 1.14 2007/01/05 08:37:36 opfer Exp $
+
+  05 Jan 2007; Christian Faulhammer <opfer@gentoo.org> edtftpj-1.5.3.ebuild:
+  stable x86, bug #159721
 
   05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> edtftpj-1.4.4.ebuild,
   edtftpj-1.4.8.ebuild, edtftpj-1.5.2.ebuild, edtftpj-1.5.3.ebuild:
